--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | QR code component</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="qr-code-component-main/style.css">
   <link rel="font-family" href="https://fonts.google.com/specimen/Outfit">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
